<resources>
    <string name="app_name">Save Money</string>

    <!--    login pages-->
    <string name="title_login">Login</string>
    <string name="message_login">Please login to continue</string>
    <string name="dont_have_an_account">Don\'t have an account? Registrasi</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Nama</string>
    <string name="btn_login_text">Login</string>

    <!--    signup pages-->
    <string name="message_password">Password must be at least 8 characters</string>
    <string name="title_register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_regis">create an account to access all the features of SaveMoney</string>
    <string name="btn_ready_login">Already have an account? Login</string>

    <!--   bottom navigation bar-->
    <string name="dashboard">Dashboard</string>
    <string name="transaction">Transactions</string>
    <string name="news">News</string>
    <string name="other">Other</string>
    <string name="add_expenditure">Add</string>

    <!--    dashboard-->
    <string name="welcome">Welcome, %1$s!</string>
    <string name="income_text">Income</string>
    <string name="expenses_text">Expenses</string>
    <string name="balance">%1$s</string>
    <string name="income">%1$s</string>
    <string name="expenses">%1$s</string>
    <string name="setting">Settings</string>
    <string name="balance_text">Saldo</string>

    <!--    title view pager-->
    <string name="title_pager_income">Income</string>
    <string name="title_pager_expense">Expenses</string>

    <!--    title appbar add-->
    <string name="tambah_data">Add Data</string>

    <!--    Night Mode Preference-->
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>

    <!--    title preference-->
    <string name="title_display">Theme</string>

    <!--    category-->
    <string name="foods_beverages">Food &amp; Beverages</string>
    <string name="entertainment">Entertainment</string>
    <string name="clothes">Clothes</string>
    <string name="Bills_Utilities">Bills &amp; Utilities</string>
    <string name="other_category">Other</string>
    <string name="due_data_expense">Date Expenses</string>
    <string name="btn_add_expense">Add Expenses</string>
    <string name="amount_of_expenditure">Amount of Expenses</string>
    <string name="note">Notes</string>
    <string name="title_app_bar_setting">Setting</string>
    <string name="statistic">Statistic</string>

    <!--    news-->
    <string name="label_news">label</string>
    <string name="simbol_news">symbol</string>
    <string name="news_data_tidak_tersedia">Data Tidak Tersedia</string>
    <string name="news_gagal_memuat_data">Gagal Memuat Data</string>
    <string name="news_memuat_data">Memuat Data…</string>
    <string name="company">Company</string>
    <string name="name_ojk">name_ojk</string>
    <string name="owner_ojk">owner_ojk</string>
    <string name="investasi_ojk">Investasi Ojk</string>
    <string name="menu">Menu</string>
    <string name="btn_saham_trending">Saham Trending</string>
    <string name="close_92">Close: %1$s</string>
    <string name="change_9">Change: %1$s</string>
    <string name="percent_8_91">Percent: %1$s</string>
    <string name="logo">logo</string>
    <string name="symbol">symbol</string>
    <string name="close">Closing Price: %1$s</string>
    <string name="change">Price Change: %1$s</string>
    <string name="percent">Change Percentage: %1$s</string>
    <string name="saham_trending">Saham Trending</string>
    <string name="grafik_saham">Traffic</string>
    <string name="logout">Logout</string>
    <string name="portal">Portal</string>
    <string name="saham">Stock</string>


    <string name="last_month">Last Month</string>
    <string name="this_month">This Month</string>


    <string name="name_required_error">name_required_error</string>
    <string name="email_required_error">email_required_error</string>
    <string name="password_required_error">password_required_error</string>
    <string name="hort_password_error">hort_password_error</string>
    <string name="malformed_email_error">malformed_email_error</string>
    <string name="tanggal_pendapatan">Tanggal pendapatan</string>
    <string name="tambahkan_pendapatan">Tambahkan Pendapatan</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="expense_saved_successfully">Expense saved successfully</string>
    <string name="failed_to_save_expense">Failed to save Expense</string>
    <string name="income_saved_successfully">Income saved successfully</string>
    <string name="failed_to_save_income">Failed to save income</string>
    <string name="login_berhasil">Login berhasil</string>
    <string name="login_gagal">Login gagal</string>
    <string name="failed_to_save_user_data">Failed to save user data.</string>
    <string name="registration_failed">Registration failed: %1$s</string>
    <string name="reset_password">Reset Password</string>
    <string name="message_forgot_password">Email reset password telah dikirim ke %1$s</string>
    <string name="message_error_forgotpw">Gagal mengirim email reset password. Periksa kembali alamat email Anda.</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="message_invalid">Masukkan alamat email yang valid</string>
    <string name="message_email_not_registered">Email tidak terdaftar</string>
    <string name="jumlah_pendapatan">Jumlah pendapatan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="title">title\n</string>
    <string name="published_date">Published Date\n</string>
    <string name="detail_pemasukan">Income Detail</string>
    <string name="detail_pengeluaran">Expense Detail</string>
    <string name="hapus">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_income">Add</string>
    <string name="add_expense">Add</string>
    <string name="save">Save</string>

    <string name="income_updated_successfully">Income has been updated</string>
    <string name="failed_to_update_income">Failed to update income</string>

    <string name="expenses_updated_successfully">Expense has been updated</string>
    <string name="failed_to_update_expenses">Failed to update Expenses</string>
    <string name="konfirmasi">Confirm</string>
    <string name="confirmation_delete">Are you sure to delete this transactions?</string>
    <string name="delete_transaction">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="percent_from_month_average">(%1$s from Month Average)</string>

    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Reminder when countdown has finished.</string>
    <string name="notify_channel_name">Habit Reminder</string>
    <string name="notify_content">Time Up!</string>

</resources>