<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/dashboard"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/transaction"
        android:title="@string/transaction" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/add_transaction"
        android:title="@string/add_expenditure"/>

    <item
        android:id="@+id/navigation_saham"
        android:icon="@drawable/news"
        android:title="@string/saham" />
    <item
        android:id="@+id/navigation_other"
        android:icon="@drawable/other"
        android:title="@string/portal" />

</menu>