<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_dashboard">


    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dicoding.savemoney.ui.fragment.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <activity
        android:id="@+id/navigation_transaction"
        android:name="com.dicoding.savemoney.ui.fragment.transaction.TransactionsActivity"
        android:label="@string/transaction"
        tools:layout="@layout/activity_transactions" />

    <fragment
        android:id="@+id/navigation_statistic"
        android:name="com.dicoding.savemoney.ui.fragment.statistic.StatisticFragment"
        android:label="@string/statistic"
        tools:layout="@layout/fragment_statistic" />


    <fragment
        android:id="@+id/navigation_other"
        android:name="com.dicoding.savemoney.ui.fragment.other.OtherFragment"
        android:label="@string/other"
        tools:layout="@layout/fragment_other" />
</navigation>